# findRezolution

./: .gitignore  CMakeLists.txt  README.md  calculateRezolution.py  findBestPeak.py  main.cpp  python_params.yaml  test_classes.cpp
include/: TEventData.hpp  calculateRezolution.hpp  loadData.hpp
output/: missing_files.txt  results_sci.csv
scripts/: findBestPeak.py  partialDependence.py
src/: calculateRezolution.cpp  loadData.cpp
